--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,187 @@
-.App {
-  text-align: center;
+/* Page Layout */
+
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container {
+	position: relative;
+	height: 100vh;
+	width: 100vw;
+	background-color: grey;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7)
 }
 
-.App-link {
-  color: #61dafb;
+.content {
+	max-width: 700px;
+	padding: 2rem;
+	position: relative;
+	z-index: 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content h1 {
+	font-size: 4.3rem;
+	margin-bottom: 0.8rem;
+	color: #fff44f;
+}
+
+/* Hamburger Menu */
+
+.menu-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 2
+}
+
+.toggler {
+	position: absolute;
+	top: 0.5rem;
+	left: 0.5rem;
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	opacity: 0;
+	z-index: 3;
+	cursor: pointer;
+}
+
+.hamburger {
+	position: absolute;
+	top: 0.5rem;
+	left: 0.5rem;
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	background-color: #111;
+	z-index: 2;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.hamburger>div {
+	position: absolute;
+	width: 60%;
+	height: 3px;
+	border-radius: 1.5px;
+	background-color: #fff44f;
+	transition: .4s
+}
+
+.hamburger>div:before, .hamburger>div:after {
+	content: '';
+	position: absolute;
+	width: 100%;
+	height: 3px;
+	border-radius: 1.5px;
+	background-color: #fff44f;
+	transition: .4s;
+}
+
+.hamburger>div:before {
+	top: -10px;
+}
+
+.hamburger>div:after {
+	top: 10px;
+}
+
+.toggler:checked+.hamburger>div {
+	transform: rotate(135deg)
+}
+
+
+.toggler:checked:hover+.hamburger>div {
+	transform: rotate(225deg)
+}
+
+.toggler:checked+.hamburger>div:after, .toggler:checked+.hamburger>div:before {
+	transform: rotate(90deg);
+	top: 0;
+}
+
+.toggler:checked ~ .menu{
+	visibility: visible;
+}
+
+.toggler:checked ~ .menu > div{
+	transform: translateX(-50%) translateY(-50%)
+}
+
+.toggler:checked ~ .menu > div > div{
+	opacity: 1
+}
+
+.menu {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	visibility: hidden;
+	transition: .6s;
+}
+
+.menu>div {
+	position: absolute;
+	width: 140vw;
+	height: 200vh;
+	border-radius: 50%;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-150%) translateY(-50%);
+	background-color: rgba(0, 0, 0, 0.9);
+	transition: .9s;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.menu>div>div {
+	max-width: 90vw;
+	max-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	opacity: 0;
+}
+
+.menu>div>div>ul>li {
+	list-style: none
+}
+
+.menu>div>div>ul>li>a {
+	text-decoration: none;
+	margin: .5rem;
+	display: inline-block;
+	font-size: 1.2rem;
+	font-weight: 550;
+	text-transform: uppercase;
+	color: #fff;
+	transition: .3s
+}
+
+.menu>div>div>ul>li>a:hover{
+	color: #fff44f
 }
