--- a/src/App.css
+++ b/src/App.css
@@ -157,20 +157,15 @@ body {
 }
 
 .menu>div>div {
-	max-width: 90vw;
-	max-height: 100vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	text-align: center;
 	opacity: 0;
 }
 
-.menu>div>div>ul>li {
+.nav-container {
 	list-style: none
 }
 
-.menu>div>div>ul>li>a {
+.nav-link {
 	text-decoration: none;
 	margin: .5rem;
 	display: inline-block;
@@ -181,6 +176,6 @@ body {
 	transition: .3s
 }
 
-.menu>div>div>ul>li>a:hover {
+.nav-link:hover {
 	color: #fff44f
 }
